[package]
name = "maze-generator-rust"
version = "0.1.0"
authors = ["Narasiman<madhavcv2116@gmail.com>"]
description = "A sample maze generator with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/madhav-fied/maze-generator"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
